# newsfeed_platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
config/: config.yaml
data/: index_metadata.pkl  vector_index.faiss
src/: config.py  logging_setup.py  models.py
src/aggregation/: data_aggregation_service.py
src/api/: api.py
src/dashboard/: dashboard_service.py
src/embedding/: embedding_service.py
src/filtering/: semantic_filtering_engine.py
src/ingestion/: ingestion_engine.py
src/orchestration/: ingestion_orchestrator.py  ingestion_service_factory.py  scheduler_service.py
src/ranking/: ranking_engine.py  ranking_engine_.py
src/storage/: storage_service.py
